--- a/Riskvalve/Views/Login/Index.cshtml
+++ b/Riskvalve/Views/Login/Index.cshtml
@@ -6,6 +6,11 @@
     string urllogin = Url.Action("Login", "Login");
 }
 <body class="hold-transition login-page">
+    <style>
+        html, body{
+            height: 100%;
+        }
+    </style>
     <div class="login-box">
         <div class="login-logo">
             <img src="~/lib/images/logo.jpg" />
