--- a/Riskvalve/Views/AssetRegister/Area.cshtml
+++ b/Riskvalve/Views/AssetRegister/Area.cshtml
@@ -71,26 +71,32 @@
     </div>
 </div>
 
-<div class="modal fade" id="addAreaModal" role="dialog">
+<div class="modal fade modal-xl" id="addAreaModal" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form class="asset-form">
-                <input id="field-business-area-mode" type="hidden">
-                <input id="field-business-area-id" name="businessareaid" type="hidden">
-                <div class="modal-header">
-                    <h4 class="modal-title">Add/Edit New Area</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label for="field-business-area-name">Business Area Name</label>
-                        <input id="field-business-area-name" name="businessareaname" class="form-control"
-                            placeholder="Business Area Name" required>
+            <form class="asset-form common-form">
+                <div class="box">
+                    <div class="subheader m-0">
+                        <b>Add/Edit New Area</b>
                     </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" id="btn-area-modal-delete" class="pull-left btn btn-danger">Delete</button>
-                    <button type="button" id="btn-area-modal-save" class="btn btn-primary">Save</button>
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cancel</button>
+                    <input id="field-business-area-mode" type="hidden">
+                    <input id="field-business-area-id" name="businessareaid" type="hidden">
+                    <div class="sub-container">
+                        <div class="form-container">
+                            <div class="form-grid">
+                                <div class="form-group-inline">
+                                    <label for="field-business-area-name">Business Area Name</label>
+                                    <input id="field-business-area-name" name="businessareaname" class="form-control"
+                                        placeholder="Business Area Name" required>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="box-footer">
+                            <button type="button" id="btn-area-modal-save" class="btn btn-primary">Save</button>
+                            <button type="button" class="btn btn-primary btn btn-secondary cancel-button" data-bs-dismiss="modal">Cancel</button>
+                            <button type="button" id="btn-area-modal-delete" class="pull-left btn btn-danger delete-button">Delete</button>
+                        </div>
+                    </div>
                 </div>
             </form>
         </div>
