--- a/Riskvalve/Views/AssetRegister/Platform.cshtml
+++ b/Riskvalve/Views/AssetRegister/Platform.cshtml
@@ -69,42 +69,47 @@
     </div>
 </div>
 
-<div class="modal fade" id="addPlatformModal" role="dialog">
+<div class="modal fade modal-xl" id="addPlatformModal" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form id="platform-form">
+            <form id="platform-form" class="common-form">
                 <input id="field-platform-mode" type="hidden">
                 <input id="field-platform-id" name="platformid" type="hidden">
-                <div class="modal-header">
-                    <h4 class="modal-title">Add/Edit New Platform</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label for="field-plarfoem-area">Business Area</label>
-                        <select id="field-platform-area" name="businessarea" class="form-control" required>
-                            <option value="">Select Business Area</option>
-                            @foreach (var item in areaList)
-                            {
-                                <option value="@item.Id">@item.BusinessArea</option>
-                            }
-                        </select>
+                <div class="box">
+                    <div class="subheader m-0">
+                        <b>Add/Edit New Platform</b>
                     </div>
-                    <div class="form-group">
-                        <label for="field-platform-name">Platform Name</label>
-                        <input id="field-platform-name" name="platformname" class="form-control"
-                            placeholder="Platform Name" required>
+                    <div class="sub-container">
+                        <div class="form-container">
+                            <div class="form-grid">
+                                <div class="form-group-inline">
+                                    <label for="field-plarfoem-area">Business Area</label>
+                                    <select id="field-platform-area" name="businessarea" class="form-control" required>
+                                        <option value="">Select Business Area</option>
+                                        @foreach (var item in areaList)
+                                        {
+                                            <option value="@item.Id">@item.BusinessArea</option>
+                                        }
+                                    </select>
+                                </div>
+                                <div class="form-group-inline">
+                                    <label for="field-platform-name">Platform Name</label>
+                                    <input id="field-platform-name" name="platformname" class="form-control"
+                                        placeholder="Platform Name" required>
+                                </div>
+                                <div class="form-group-inline">
+                                    <label for="field-platform-code">Platform Code</label>
+                                    <input id="field-platform-code" name="platformcode" class="form-control"
+                                        placeholder="Platform Code" required>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="box-footer">
+                            <button type="button" id="btn-platform-modal-save" class="btn btn-primary">Save</button>
+                            <button type="button" class="btn btn-primary btn btn-secondary cancel-button" data-bs-dismiss="modal">Cancel</button>
+                            <button type="button" id="btn-platform-modal-delete" class="pull-left btn btn-danger delete-button">Delete</button>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="field-platform-code">Platform Code</label>
-                        <input id="field-platform-code" name="platformcode" class="form-control"
-                            placeholder="Platform Code" required>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" id="btn-platform-modal-delete"
-                        class="pull-left btn btn-danger">Delete</button>
-                    <button type="button" id="btn-platform-modal-save" class="btn btn-primary">Save</button>
-                    <button type="button" class="btn btn-primary "data-bs-dismiss="modal">Cancel</button>
                 </div>
             </form>
         </div>
