--- a/Riskvalve/Views/Home/Index.cshtml
+++ b/Riskvalve/Views/Home/Index.cshtml
@@ -164,29 +164,29 @@ width="1242"></canvas>
                     </div>
                 }
                 <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-md-6">
                         <div class="card">
                             <div class="card-header">
                                 Risk Distribution
                             </div>
-                            <div class="card-body risk-heatmap-container">
-                                <div id="risk-heatmap"></div>
+                            <div class="card-body risk-heatmap-container" style="aspect-ratio: 1;">
+                                <div id="risk-heatmap" style="aspect-ratio: 1;"></div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-5">
-                        <div class="card">
+                    <div class="col-md-6">
+                        <div class="card h-100">
                             <div class="card-header">
                                 Risk Distribution
                             </div>
-                            <div class="card-body">
-                                <div id="risk-piechart"></div>
+                            <div class="card-body" style="aspect-ratio: 1;">
+                                <div id="risk-piechart" style="aspect-ratio: 1;"></div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="row mt-4">
-                    <div class="col-md-10">
+                    <div class="col-md-12">
                         <div class="card">
                             <div class="card-header">
                                 Risk Distribution Area
@@ -397,7 +397,8 @@ width="1242"></canvas>
             })
             $('#risk-piechart').highcharts({
                 chart: {
-                    type: 'pie'
+                    type: 'pie',
+                    spacing: [0, 0, 0, 0]
                 },
                 title: {
                     text: 'Risk Distribution'
@@ -406,6 +407,7 @@ width="1242"></canvas>
                 },
                 plotOptions: {
                     pie: {
+                        size: '100%',
                         colors: [
                             '#81B014',
                             'green',
