--- a/Riskvalve/Views/Maintenance/Index.cshtml
+++ b/Riskvalve/Views/Maintenance/Index.cshtml
@@ -25,8 +25,9 @@
         <div class="sidebar border border-right col-md-3 col-lg-2 p-0 bg-body-tertiary">
             <partial name="InspectionAssessmentSidebar" />
         </div>
-        <main class="col-md-9 ms-sm-auto col-lg-10 p-0 subheader-negative-margin with-bg-image"
-            style="background-image:url('@baseurl/lib/images/u45.png')">
+        @* <main class="col-md-9 ms-sm-auto col-lg-10 p-0 subheader-negative-margin with-bg-image"
+        style="background-image:url('@baseurl/lib/images/u45.png')"> *@
+        <main class="col-md-9 ms-sm-auto col-lg-10 p-0 subheader-negative-margin with-bg-image">
             <div>
                 <ul class="nav nav-tabs nav-tab-menus" id="inspectiontabheader" role="tablist">
                     <li class="nav-item">
@@ -266,7 +267,7 @@
                                 // add menu to tree
         @* console.log(equipmentId) *@
         @* console.log($('ul[equipment-id=' + equipmentId + ']')) *@
-                                    $('ul[equipment-id="' + equipmentId + '"]').append(`
+                                    @* $('ul[equipment-id="' + equipmentId + '"]').prepend(`
                                             <li class="treeview">
                                                 <a class="btn-add-new-inspection" history-button="" 
                                                 attr-id="${res.Asset.Id}" attr-inspection-id="${res.Id}" 
@@ -281,7 +282,23 @@
                                                     ${res.MaintenanceDate}
                                                 </a>
                                             </li>
-                                        `)
+                                        `) *@
+                                    $('ul[equipment-id="' + equipmentId + '"] li').eq(0).after(`
+                                        <li class="treeview">
+                                            <a class="btn-add-new-inspection" history-button="" 
+                                            attr-id="${res.Asset.Id}" attr-inspection-id="${res.Id}" 
+                                            attr-name="${res.Asset.TagNo} ${res.MaintenanceDate}" 
+                                            attr-sidebar-level="4" 
+                                            attr-find-inspection="${res.Asset.BusinessArea}" 
+                                            attr-find-platform="${res.Asset.Platform}" 
+                                            attr-find-equipment="${res.Asset.TagNo}" 
+                                            attr-find-imr="NEW"
+                                            onclick="addTab.apply(this)"
+                                            >
+                                                ${res.MaintenanceDate} (NEW)
+                                            </a>
+                                        </li>
+                                    `)
 
                                 form.find('.preview-image-gallery .single-image').remove()
                                 form.find('.preview-image-gallery input[type=file]').remove()
