--- a/Riskvalve/Views/User/Index.cshtml
+++ b/Riskvalve/Views/User/Index.cshtml
@@ -89,48 +89,52 @@
     </div>
 </div>
 
-<div class="modal fade" id="addUserModal" role="dialog">
+<div class="modal fade modal-xl" id="addUserModal" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form class="user-form">
+            <form class="user-form common-form">
                 <input id="field-user-mode" type="hidden">
                 <input id="field-user-id" name="userid" type="hidden">
-                <div class="modal-header">
-                    <h4 class="modal-title">Add/Edit New user</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label for="field-username">Email</label>
-                        <input id="field-username" type="email" name="username" class="form-control" placeholder="Email"
-                            required>
+                 <div class="box">
+                    <div class="subheader m-0">
+                        <b>Add/Edit New user</b>
                     </div>
-                    <div class="form-group">
-                        <label for="field-password">Password</label>
-                        <input type="password" id="field-password" name="password" class="form-control"
-                            placeholder="Leave blank if you don\'t want to change the password" required>
+                    <div class="sub-container">
+                        <div class="form-container">
+                            <div class="form-grid">
+                                <div class="form-group-inline">
+                                    <label for="field-username">Email</label>
+                                    <input id="field-username" type="email" name="username" class="form-control" placeholder="Email"
+                                        required>
+                                </div>
+                                <div class="form-group-inline">
+                                    <label for="field-isadmin">Admin</label>
+                                    <input type="checkbox" id="field-isadmin" name="isadmin" class="form-control">
+                                </div>
+                                <div class="form-group-inline">
+                                    <label for="field-password">Password</label>
+                                    <input type="password" id="field-password" name="password" class="form-control" required>
+                                </div>
+                                <div class="form-group-inline">
+                                    <label for="field-isengineer">Engineer</label>
+                                    <input type="checkbox" id="field-isengineer" name="isengineer" class="form-control">
+                                    </div>
+                                <div class="form-group-inline">
+                                    <label for="field-role">Role Name</label>
+                                    <input id="field-role" name="role" class="form-control" placeholder="Role Name" required>
+                                </div>
+                                <div class="form-group-inline">
+                                    <label for="field-isviewer">Viewer</label>
+                                    <input type="checkbox" id="field-isviewer" name="isviewer" class="form-control">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="box-footer">
+                            <button type="button" id="btn-user-modal-save" class="btn btn-primary">Save</button>
+                            <button type="button" class="btn btn-primary btn btn-secondary cancel-button" data-bs-dismiss="modal">Cancel</button>
+                            <button type="button" id="btn-user-modal-delete" class="pull-left btn btn-danger delete-button">Delete</button>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="field-role">Role Name</label>
-                        <input id="field-role" name="role" class="form-control" placeholder="Role Name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="field-isadmin">Admin</label>
-                        <input type="checkbox" id="field-isadmin" name="isadmin" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label for="field-isengineer">Engineer</label>
-                        <input type="checkbox" id="field-isengineer" name="isengineer" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label for="field-isviewer">Viewer</label>
-                        <input type="checkbox" id="field-isviewer" name="isviewer" class="form-control">
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" id="btn-user-modal-delete" class="pull-left btn btn-danger">Delete</button>
-                    <button type="button" id="btn-user-modal-save" class="btn btn-primary">Save</button>
-                    <button type="button" id="btn-user-modal-cancel" class="btn btn-primary"
-                        data-dismiss="modal">Cancel</button>
                 </div>
             </form>
         </div>
@@ -152,6 +156,7 @@
                 $('#field-user-mode').val('create');
                 $('#btn-user-modal-delete').hide();
                 $('#field-password').attr('required', 'true')
+                $('#field-password').attr('placeholder', 'Password');
                 $('#addUserModal').modal('show');
             } else if (mode == 'view') {
                 var id = $(this).attr('attr-itemid');
