--- a/Riskvalve/wwwroot/css/global.css
+++ b/Riskvalve/wwwroot/css/global.css
@@ -11,6 +11,10 @@ body {
   white-space: nowrap !important;
 }
 
+.h-100 {
+  height: 100%;
+}
+
 .header .header-logo {
   max-height: 60px;
   max-width: 100%;
@@ -257,7 +261,7 @@ body {
   margin: 0 0 15px 0;
 }
 
-.inspection-tab .sub-container {
+.inspection-tab .sub-container, .common-form .sub-container {
   padding: 15px;
 }
 
@@ -266,7 +270,7 @@ body {
   max-width: 1000px;
 }
 
-.inspection-form .form-control {
+.inspection-form .form-control, .common-form .form-control {
   height: auto;
   padding: 3px 6px;
   font-size: 12px;
@@ -276,7 +280,7 @@ body {
   border-color: red;
 }
 
-.inspection-form .form-control[readonly] {
+.inspection-form .form-control[readonly], .common-form .form-control[readonly] {
   background-color: rgb(242, 242, 242);
 }
 
@@ -398,16 +402,16 @@ svg * {
   transform-box: fill-box;
 }
 
-.inspection-form textarea {
+.inspection-form textarea, .common-form textarea {
   resize: none;
 }
 
-.inspection-form .box-footer {
+.inspection-form .box-footer, .common-form .box-footer {
   margin-top: 15px;
   display: flex;
 }
 
-.inspection-form .box-footer button {
+.inspection-form .box-footer button, .common-form .box-footer button {
   margin-right: 10px;
   min-width: 130px;
   border-radius: 8px;
@@ -416,27 +420,36 @@ svg * {
   transition: all 0.3s;
 }
 
-.inspection-form .box-footer button:hover {
+.inspection-form .box-footer button:hover, .common-form .box-footer button:hover {
   box-shadow: 0 0 2px 3px rgba(0, 0, 0, 0.1);
 }
 
-.inspection-form .box-footer button:focus {
+.inspection-form .box-footer button:focus, .common-form .box-footer button:focus {
   box-shadow: none;
   outline: none;
 }
 
-.inspection-form .box-footer .submit-button {
+.inspection-form .box-footer .submit-button, .common-form .box-footer .submit-button {
   background-color: rgba(22, 155, 213, 1);
 }
 
-.inspection-form .box-footer .print-button {
+.inspection-form .box-footer .print-button, .common-form .box-footer .print-button {
   background-color: rgba(245, 154, 35, 1);
 }
 
-.inspection-form .box-footer .delete-button {
+.inspection-form .box-footer .delete-button, .common-form .box-footer .delete-button {
   background-color: rgba(217, 0, 27, 1);
   margin-left: auto;
   margin-right: 0;
+}
+
+.common-form .box-footer .cancel-button {
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.common-form .box-footer .cancel-button + .delete-button {
+  margin-left: 10px;
 }
 
 .form-grid {
@@ -458,6 +471,31 @@ svg * {
 .form-group-inline {
   display: flex;
   align-items: center;
+}
+
+.lf2-preview-table label{
+  font-weight: bold;
+  font-size: 12px;
+  margin-right: 10px;
+}
+.lf2-preview-table td{
+  padding: 3px;
+}
+
+.form-group-inline.with-margin-bottom{
+  margin-bottom: 15px;
+}
+.form-group-inline.with-margin-bottom:last-child{
+  margin-bottom: 0;
+}
+
+.form-section-title{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.form-section-title:first-child{
+  margin-top: 0;
 }
 
 .form-group-inline label {
@@ -593,7 +631,7 @@ svg * {
 }
 
 .login-page .login-box-msg {
-  font-size: 36px;
+  font-size: 28px;
   color: #333;
   font-weight: 500;
 }
@@ -606,7 +644,8 @@ svg * {
   position: absolute;
   left: 0;
   bottom: 0;
-  padding: 20px 15px;
+  padding: 10px 15px;
+  font-size: 13px;
 }
 
 .login-form {
@@ -699,7 +738,7 @@ select.readonly {
 }
 
 .inspection-maintenance-select input {
-  display: none;
+  /* display: none; */
 }
 
 .inspection-maintenance-select input:checked + label.btn-light {
@@ -728,6 +767,21 @@ select.readonly {
 
 .risk-heatmap-container {
   padding-left: 50px;
+}
+
+.pop-up-history-table th {
+  background-color: #027db4;
+  color: white;
+  font-weight: normal;
+}
+
+.pop-up-history-table {
+  width: 100%;
+}
+
+.pop-up-history-table td, .pop-up-history-table th {
+  padding: 3px 5px;
+  border: solid 1px #ccc;
 }
 
 @media print {
