--- a/Riskvalve/Views/AssetRegister/Platform.cshtml
+++ b/Riskvalve/Views/AssetRegister/Platform.cshtml
@@ -34,11 +34,11 @@
                 <table class="table table-bordered datatable" style="width: 100%;">
                     <thead>
                         <tr>
-                            <th>No</th>
-                            <th>Business Area</th>
+                            <th class="col-md-1">No</th>
+                            <th class="col-md-2">Business Area</th>
                             <th>Platform</th>
                             <th>Code</th>
-                            <th></th>
+                            <th class="col-md-1"></th>
                         </tr>
                     </thead>
                     <tbody>
