--- a/Riskvalve/Views/Home/Index.cshtml
+++ b/Riskvalve/Views/Home/Index.cshtml
@@ -57,7 +57,7 @@
                 }
                 <div class="card">
                     <div class="card-header">
-                        Risk Distribution
+                        <b>Asset Distribution</b>
                     </div>
                     <div class="card-body" style="padding: 10px 5px;">
                         <div class="row">
@@ -67,10 +67,12 @@
                                         Central Business Unit
                                     </div>
                                     <div class="info-card__content">
+                                        <text style="font-size: larger">
                                         @if (assetDistribution != null)
                                         {
                                             @assetDistribution["CBU"]
                                         }
+                                        </text>
                                     </div>
                                 </div>
                             </div>
@@ -80,10 +82,12 @@
                                         North Business Unit
                                     </div>
                                     <div class="info-card__content">
+                                        <text style="font-size: larger">
                                         @if (assetDistribution != null)
                                         {
                                             @assetDistribution["NBU"]
                                         }
+                                        </text>
                                     </div>
                                 </div>
                             </div>
@@ -93,21 +97,23 @@
                                         South Business Unit
                                     </div>
                                     <div class="info-card__content">
+                                        <text style="font-size: larger">
                                         @if (assetDistribution != null)
                                         {
                                             @assetDistribution["SBU"]
                                         }
+                                        </text>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row mt-4">
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card h-100">
                             <div class="card-header">
-                                Risk Distribution
+                                <b>Risk Matrix</b>
                             </div>
                             <div class="card-body risk-heatmap-container" style="aspect-ratio: 1;">
                                 <div id="risk-heatmap" style="aspect-ratio: 1;"></div>
@@ -117,7 +123,7 @@
                     <div class="col-md-4">
                         <div class="card h-100">
                             <div class="card-header">
-                                Risk Distribution
+                                <b>Risk Distribution</b>
                             </div>
                             <div class="card-body" style="aspect-ratio: 1;">
                                 <div id="risk-piechart" style="aspect-ratio: 1;"></div>
@@ -127,7 +133,7 @@
                     <div class="col-md-4">
                         <div class="card h-100">
                             <div class="card-header">
-                                Bar chart
+                                <b>Priority</b>
                             </div>
                             <div class="card-body">
                                 <div id="risk-barchart-horizontal"></div>
@@ -139,7 +145,7 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-header">
-                                Risk Distribution Area
+                                <b>Risk Status per Area</b>
                             </div>
                             <div class="card-body">
                                 <div id="risk-barchart"></div>
@@ -159,7 +165,7 @@
                 type: 'bar'
             },
             title: {
-                text: 'Priority'
+                text: ''
             },
             xAxis: {
                 categories: ['Priority']
@@ -392,7 +398,7 @@
                     spacing: [0, 0, 0, 0]
                 },
                 title: {
-                    text: 'Risk Distribution'
+                    text: '',
                 },
                 tooltip: {
                 },
@@ -476,7 +482,7 @@
                     type: 'column'
                 },
                 title: {
-                    text: 'Area Risk Status',
+                    text: '',
                 },
                 xAxis: {
                     categories: Object.keys(jsonAssessmentBarChart),
