--- a/Riskvalve/Views/Home/Index.cshtml
+++ b/Riskvalve/Views/Home/Index.cshtml
@@ -168,7 +168,7 @@
                 text: ''
             },
             xAxis: {
-                categories: ['Priority']
+                categories: ['']
             },
             yAxis: {
                 title: {
