--- a/Riskvalve/Views/Assessment/PrintAssessment.cshtml
+++ b/Riskvalve/Views/Assessment/PrintAssessment.cshtml
@@ -109,7 +109,7 @@
             <tr>
                 <td colspan="6" rowspan="10">
                     <div class="risk-chart">
-                        <img class="risk-matrix-legend" src="~/lib/images/risk-matrix-legend.png">
+                        <img class="risk-matrix-legend" src="~/lib/images/risk-matrix-legend2.png">
                         <div class="print-risk-table">
                             <div class="risk-dots">
                                 <div class="dot-tp1 dot" style="bottom: @assessmentHeatMap["TP1"]["xpos"]%; left: @assessmentHeatMap["TP1"]["ypos"]%;"></div>
@@ -178,7 +178,7 @@
                 <td width="60px" class="table-section no-transform">TP1</td>
                 <td width="60px" class="table-section no-transform">TP2</td>
                 <td width="60px" class="table-section no-transform">TP3</td>
-                <td class="table-section no-transform">Inspection Due Date</td>
+                <td class="table-section no-transform">Action Date</td>
                 <td class="table-section no-transform">Remarks</td>
                 <td colspan="5">Waiting For Refurbishment</td>
                 <td colspan="1" class="checkbox">
